test/libsolidity/syntaxTests/constructor/library_constructor_old.sol
library Lib {
	function Lib() public;
}
// ----
// Warning: (15-37): Defining constructors as functions with the same name as the contract is deprecated. Use "constructor(...) { ... }" instead.
// TypeError: (15-37): Constructor cannot be defined in libraries.
// TypeError: (15-37): Constructor must be implemented if declared.
